--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.11.3",
     "chart.js": "^4.5.1",
+    "lucide-vue-next": "^0.561.0",
     "nuxt": "^4.2.2",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
