--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.14.0"
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "typescript": "^5.9.3",
+    "vue-tsc": "^3.2.0"
   }
 }
